<package>

  <name>planning_scene_manager_msgs</name>
  <version>0.0.2</version>
  <description>
    Messages for the planning scene manager
  </description>
  <author>Sebastian Mueller</author>
  <maintainer email="semueller@techfak.uni-bielefeld.de">Sebastian Mueller</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>grasping_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>grasping_msgs</run_depend>

</package>
